--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "baseUrl": "./src",
-        "rootDir": "./src",
-        "outDir": "./Resources",
-        "lib": [ "es5" ],
         "allowJs": true,
-        "noEmitOnError": true
+        "baseUrl": "./src",
+        "lib": [ "es5" ],
+        "module": "commonjs",
+        "noEmitOnError": true,
+        "outDir": "./Resources",
+        "rootDir": "./src",
+        "target": "es5"
     },
     "include": [
         "src",
