--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "baseUrl": "./src",
-        "lib": [ "es5" ],
-        "module": "commonjs",
-        "noEmitOnError": true,
-        "outDir": "./Resources",
-        "rootDir": "./src",
-        "target": "es5"
-    },
-    "include": [
-        "src",
-        "typings"
-    ]
+	"compileOnSave": false,
+	"compilerOptions": {
+		"allowJs": true,
+		"baseUrl": "./src",
+		"lib": [ "es5" ],
+		"module": "commonjs",
+		"noEmitOnError": true,
+		"outDir": "./Resources",
+		"rootDir": "./src",
+		"target": "es5"
+	},
+	"include": [
+		"src",
+		"typings"
+	]
 }
