--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "typescript": "^2.1.4"
   },
   "scripts": {
-    "build": "./bin/vendorize.sh && browserify -e vendorize.js -o Modules/vendor.js && tsc",
+    "build": "npm run vendorize && tsc",
     "lint": "tslint -t codeFrame src/**/*.ts",
     "test": "tslint -t stylish src/**/*.ts",
+    "vendorize": "./bin/vendorize.js && browserify -e vendorize.js -o Modules/vendor.js",
     "watch": "npm run build -- -w"
   },
   "repository": {
